engine-net-2/examples/Errors/FunctionMethodParametersOutTypeMismatch.grs
new graph "Rules.grg"

exec { n:N=null; i:int=n.f(42) }

quit
